--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,18 @@
 
 body {
   text-align: center;
-  background: linear-gradient(to bottom, #6ab7f5, #fff);
+  background: url(../images/background.jpg);
   min-height: 100vh;
+}
+
+header {
+  padding: 0vh 5vw;
+  text-align: center;
+}
+
+header img {
+  width: 100%;
+  max-width: 600px;
 }
 
 main {
@@ -22,7 +32,7 @@ main {
 
 .pokedex {
   width: 100%;
-  max-width: 425px;
+  max-width: 410px;
 }
 
 .pokemon__image {
@@ -92,3 +102,5 @@ main {
   box-shadow: inset -4px 4px 0 #222;
   font-size: 0.9rem;
 }
+
+
