--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 body {
   text-align: center;
-  background: url(../images/background.jpg);
+  background: url(../images/wp4359884.jpg);
   min-height: 100vh;
 }
 
